fix: fix high contrast mode to components

--- a/packages/components/src/combobox/ComboBox.module.css
+++ b/packages/components/src/combobox/ComboBox.module.css
@@ -21,6 +21,11 @@
     border: none;
     outline: none;
     box-shadow: focus;
+
+    @media (forced-colors: active) {
+      outline-offset: 2px;
+      outline: 3px solid Highlight !important;
+    }
   }
 
   &[data-disabled] {
