--- a/packages/components/src/link-button/LinkButton.module.css
+++ b/packages/components/src/link-button/LinkButton.module.css
@@ -31,6 +31,11 @@
 
   &[data-focus-visible] {
     box-shadow: focus;
+
+    @media (forced-colors: active) {
+      outline-offset: 2px;
+      outline: 3px solid Highlight !important;
+    }
   }
 
   &[data-disabled] {
