--- a/packages/components/src/radio/Radio.module.css
+++ b/packages/components/src/radio/Radio.module.css
@@ -43,6 +43,11 @@
   &:focus-visible {
     box-shadow: focus;
     outline: none;
+
+    @media (forced-colors: active) {
+      outline-offset: 2px;
+      outline: 3px solid Highlight !important;
+    }
   }
 
   &[data-disabled] {
