--- a/packages/components/src/textarea/TextArea.module.css
+++ b/packages/components/src/textarea/TextArea.module.css
@@ -22,6 +22,11 @@
   &[data-focused],
   &[data-focus-visible] {
     box-shadow: focus;
+
+    @media (forced-colors: active) {
+      outline-offset: 2px;
+      outline: 3px solid Highlight !important;
+    }
   }
 
   &[data-invalid] {
